--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.2.1",
     "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
@@ -12,8 +13,6 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6"
   },
   "scripts": {
